files: fix td.size text-align

--- a/web/assets/demos/files.css
+++ b/web/assets/demos/files.css
@@ -11,3 +11,6 @@
 	width: 1%;
 }
 
+#files_table td.size {
+	text-align: right;
+}
